# rescue-bird

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  PUSH_INSTRUCTIONS.md  README.md  pyproject.toml
docker/: .env.example  Dockerfile.behavior  Dockerfile.comms  Dockerfile.gcs  Dockerfile.perception  Dockerfile.sim  docker-compose.yml
docs/: architecture.md  instrumentation_guide.md  subsystem_to_silicon_map.md  testing.md  whatif_kpis.md
docs/decisions/: 001-two-source-model.md  002-per-subsystem-nodes.md  003-asymmetric-multi-camera.md  004-dedicated-isp.md  005-cadence-dsp.md  006-flight-control-rt-core.md  007-bf16-differentiator.md  008-llm-memory-bound.md  009-npu-efficiency.md  010-glass-to-glass-budget.md  011-test-harness.md  README.md
gazebo/worlds/: search_area.world
instrumentation/: subsystems.py
instrumentation/analysis/: soc_partition_report.py
instrumentation/analysis/profiles/: imx95.yaml  rescue_bird_a720.yaml  snapdragon.yaml
instrumentation/analysis/whatif/: __init__.py  kpis.py  sliders.py  whatif_cli.py  workload_model.py
instrumentation/probes/: __init__.py  g2g_probe.py  gpu_probe.py  nvenc_probe.py  op_probe.py  probe_writer.py
instrumentation/schemas/: __init__.py  workload_record.py
instrumentation/sizing/: __init__.py  kpis.py  sliders.py  whatif_cli.py  workload.py
missions/: fog_rescue.yaml  rescue_bird_full.yaml  search_pattern.yaml  target_acquisition.yaml
px4/airframes/: README.md
ros2_ws/src/drone_behavior/: package.xml  setup.py
ros2_ws/src/drone_behavior/drone_behavior/: behavior_node.py
ros2_ws/src/drone_bringup/: package.xml  setup.py
ros2_ws/src/drone_bringup/launch/: full_stack.launch.py
ros2_ws/src/drone_comms/: package.xml  setup.py
ros2_ws/src/drone_comms/drone_comms/: comms_node.py
ros2_ws/src/drone_dsp/: package.xml  setup.py
ros2_ws/src/drone_dsp/drone_dsp/: dsp_node.py
ros2_ws/src/drone_isp/: package.xml  setup.py
ros2_ws/src/drone_isp/drone_isp/: isp_node.py
ros2_ws/src/drone_msgs/: README.md
ros2_ws/src/drone_perception/: package.xml  setup.py
ros2_ws/src/drone_perception/drone_perception/: perception_node.py
ros2_ws/src/drone_pilot/drone_pilot/: pilot_node.py
ros2_ws/src/drone_radar/: package.xml  setup.py
ros2_ws/src/drone_radar/drone_radar/: radar_node.py
ros2_ws/src/drone_telemetry/: package.xml  setup.py
ros2_ws/src/drone_telemetry/drone_telemetry/: telemetry_node.py
ros2_ws/src/drone_video_encode/: package.xml  setup.py
ros2_ws/src/drone_video_encode/drone_video_encode/: encode_node.py
ros2_ws/src/drone_vio/: package.xml  setup.py
ros2_ws/src/drone_vio/drone_vio/: vio_node.py
scripts/: run_mission.sh  run_sim.sh  setup.sh  start_sim.sh
tests/: README.md  conftest.py
tests/golden/: configurations.py  test_golden.py
tests/golden/snapshots/: default_a720.json  hdr3_front.json  llm_7b_active.json  no_dsp_fallback.json  npu_50_tops.json  single_channel_memory.json  snapdragon_baseline.json  stereo_only.json  stress_full.json  true_360.json
tests/unit/: test_kpis.py  test_sliders.py  test_workload_model.py
