[project]
name = "rescue-bird-analysis"
version = "0.1.0"
description = "Host-side analysis tooling for rescue-bird mission telemetry"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kyle Fox" },
]

dependencies = [
    "pyarrow>=14.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tabulate>=0.9",      # for DataFrame.to_markdown
    "psutil>=5.9",
    "nvidia-ml-py>=12.535",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
rb-soc-report = "instrumentation.analysis.soc_partition_report:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["instrumentation", "instrumentation.probes", "instrumentation.schemas", "instrumentation.analysis"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]    # line length handled by formatter
