<?xml version="1.0"?>
<package format="3">
  <name>drone_behavior</name>
  <version>0.1.0</version>
  <description>Mission FSM, tracking, command generation. Maps to ARM application core.</description>
  <maintainer email="kyle@example.invalid">Kyle</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
