<?xml version="1.0"?>
<package format="3">
  <n>drone_dsp</n>
  <version>0.1.0</version>
  <description>Cadence-class vision DSP workloads (pyramids, flow init, HDR merge, distortion).</description>
  <maintainer email="kyle@example.invalid">Kyle</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
