<?xml version="1.0"?>
<package format="3">
  <n>drone_radar</n>
  <version>0.1.0</version>
  <description>mmWave radar processing + camera/radar fusion. Maps to ARM + NPU.</description>
  <maintainer email="kyle@example.invalid">Kyle</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
