<?xml version="1.0"?>
<package format="3">
  <name>drone_video_encode</name>
  <version>0.1.0</version>
  <description>H.264/H.265/AV1 video encode. Maps to dedicated VPU.</description>
  <maintainer email="kyle@example.invalid">Kyle</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
