<?xml version="1.0"?>
<package format="3">
  <name>drone_vio</name>
  <version>0.1.0</version>
  <description>Visual-inertial odometry. Maps to GPU+NPU+ARM.</description>
  <maintainer email="kyle@example.invalid">Kyle</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
